--- a/scss/components/main_sections/main/_browseElements.scss
+++ b/scss/components/main_sections/main/_browseElements.scss
@@ -70,6 +70,14 @@
   background-color: rgba(232, 186, 62, 0.6);
 }
 
+#searchInevents {
+  margin-top: 15px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 30px;
+  padding-left: 4px;
+}
+
 .sortPanel {
   width: 700px;
   margin: 5px auto;
@@ -161,17 +169,6 @@
     color: orangered;
     width: 15px;
     transform: rotate(-90deg);
-  }
-
-  #searchInevents {
-    float: left;
-    width: 668px;
-    height: 30px;
-    padding-left: 4px;
-
-    @media (max-width: 730px) {
-      width:100%;
-    }
   }
 
   #serachIcon {
