Changed style of Search Filed in BrowseEvents
Widthof the search filed was set to match the sort tab and it was
centered.

--- a/scss/components/main_sections/main/_browseElements.scss
+++ b/scss/components/main_sections/main/_browseElements.scss
@@ -71,11 +71,11 @@
 }
 
 #searchInevents {
-  margin-top: 15px;
-  margin-bottom: 10px;
-  width: 100%;
+  margin: 15px auto 10px auto;
+  width: 700px;
   height: 30px;
   padding-left: 4px;
+  display: block;
 }
 
 .sortPanel {
