Changed style for submit button in Event form
Added cursor:pointer attribute.

--- a/scss/components/main_sections/main/_addEvents.scss
+++ b/scss/components/main_sections/main/_addEvents.scss
@@ -45,6 +45,7 @@ input[type=submit] {
   background-color: orange;
   border: 2px solid #724900;
   transition: background-color 0.25s;
+  cursor: pointer;
 }
 
 input[type=submit]:hover {
